--- a/TypeCheckerGenerator/latex/Opening.tex
+++ b/TypeCheckerGenerator/latex/Opening.tex
@@ -33,7 +33,7 @@
 
 A useful operation later will be to open up scoped entities. We take this
 to mean lifting an entity to include some scope $γ$ without capturing
-anything scoped in $γ$. When opening some enitity scoped in $δ$ by $γ$, the
+anything scoped in $γ$. When opening some entity scoped in $δ$ by $γ$, the
 result is an entity scoped in $γ + δ$ Any reference to something in
 scope refers to the same thing it did before it was opened. If some entity
 scoped in $δ$ has an action of a thinning defined for it, opening it by $γ$
@@ -65,5 +65,5 @@ may be defined as the action of the thinning $γ ◃ δ$.
 \AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
 \AgdaBound{δ}\AgdaSymbol{)}\<%
 \end{code}
-As with previous concepts, we adopt a naming convension when constructing
+As with previous concepts, we adopt a naming convention when constructing
 openings where we begin identifiers with "⊗".
