--- a/TypeCheckerGenerator/latex/Pattern.tex
+++ b/TypeCheckerGenerator/latex/Pattern.tex
@@ -156,12 +156,13 @@
 \end{code}
 }
 
-Key to implementing our generic type-checker, is the concept of a pattern. Our
+A key concept we will need to implement our generic type-checker is that of a
+pattern. Our
 rules are defined not in terms of concrete pieces of syntax, but in terms of
 patterns, which we then match against concrete syntax.
 
 Our concept of a pattern is structurally identical to that of a construction,
-except that we exclude thunks, and introduce the notion of a \emph{place} which
+except that we exclude thunks and introduce the notion of a \emph{place} that
 may stand for an arbitrary construction so long as we can fix up the scope.
 
 The dual concept of a pattern is that of an environment. It is structurally
@@ -171,10 +172,10 @@ As always, we are careful to handle scope correctly in the case of $bind$
 when constructing environments so that the underlying entity is defined in
 the weakened scope.
 
-Environments are indexed by a pattern so that we can ensure that they alway
-match exactly the pattern intended (they offer a a \emph{thing} for every
-\emph{place}). Consequently this allows us a non-failable operation to
-generate a term from from pattern $p$ and its associated $p\mbox{-Env}$
+Environments are indexed by a pattern so that we can ensure that they always
+match exactly the pattern intended (they offer a \emph{thing} for every
+\emph{place}). Consequently, this allows us a non-failable operation to
+generate a term from pattern $p$ and its associated $p\mbox{-Env}$
 
 \begin{code}%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
@@ -338,7 +339,7 @@ generate a term from from pattern $p$ and its associated $p\mbox{-Env}$
 \AgdaOperator{\AgdaDatatype{-Env}}\<%
 \end{code}
 We define the γ opening of a pattern by recursing structurally until we reach
-some \emph{palce} and prepending the thinning by the identity thinning length 
+some \emph{place} and prepending the thinning by the identity thinning length 
 $γ$.
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗\AgdaUnderscore{}}}\AgdaSpace{}%
@@ -999,10 +1000,10 @@ $γ$.
 \end{code}
 }
 We now have the required machinery to define pattern matching. We do not
-define matching over some term and pattern scoped identially, but more 
+define matching over some term and pattern scoped identically, but more 
 generally over some term that might be operating in a wider scope. This
 is crucial as a pattern is often defined in the empty scope so that we might
-not refer to arbirary free variables when defining formal rules but these rules
+not refer to arbitrary free variables when defining formal rules but these rules
 may then be applied in some non-empty scope. 
 \begin{code}%
 \>[0]\AgdaFunction{match}\AgdaSpace{}%
@@ -1131,8 +1132,8 @@ may then be applied in some non-empty scope.
 \>[25]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{nothing}\<%
 \end{code}
-When contructing formal rules, it is critical that we are able to refer
-to distinct places in a pattern. For this purpose we define a schematic
+When constructing formal rules, it is critical that we are able to refer
+to distinct places in a pattern. For this purpose, we define a schematic
 variable. This variable is able to trace a path through the pattern that
 indexes it, terminating with a $⋆$ to mark the \emph{place} we are referring to. 
 Since environments follow the same structure as their pattern we might also 
@@ -1261,8 +1262,8 @@ validity of a schematic variable with regards to its pattern.
 \AgdaBound{t}\<%
 \end{code}
 We define a few less interesting but critical utility functions for later
-use. We give a means to remove a place from a pattern, replacing it with
-a trivial atom. Similarly we extend the same functionality to environments.
+use. We give the means to remove a place from a pattern, replacing it with
+a trivial atom. Similarly, we extend the same functionality to environments.
 We also provide the means to build a term from a pattern and some appropriate
 environment.
 \begin{code}%
@@ -1977,7 +1978,7 @@ we know we might convert it to the appropriate svar.
 We intend to use this concept by initially selecting both the indexed patterns
 to be the pattern we are about to traverse, then as we traverse the structure
 of the pattern we use the combinators defined below to strip constructors off
-the second index while simultaniously encoding the removed constructor in the 
+the second index while simultaneously encoding the removed constructor in the 
 path being constructed. We give the first combinator in full here as an example,
 and the types of the other two.
 
@@ -2115,8 +2116,8 @@ and the types of the other two.
 \AgdaBound{v}\AgdaSymbol{)}\<%
 \end{code}
 }
-Finally we are able to build and actual svar from a builder only if it shows
-the path in some pattern $p$ to some place in that pattern.
+Finally, we are able to build an actual svar from a builder only if it encodes
+a path in some pattern $p$ that leads to a place in $p$.
 \begin{code}%
 \>[0]\AgdaFunction{build}\AgdaSpace{}%
 \AgdaSymbol{:}%
