--- a/TypeCheckerGenerator/latex/EtaRule.tex
+++ b/TypeCheckerGenerator/latex/EtaRule.tex
@@ -120,17 +120,17 @@
 }
 
 Later we will show how we might fully normalise a term using a technique
-known as normalisation by evaluation. In order to do this, we will find
+known as normalisation by evaluation. To do this, we will find
 that we require the ability to perform $η$-expansion and so we provide a
 rule to help us achieve this.
 
 In our η-rule, we store only the eliminator for each place in the pattern,
-then to generate the eta expanded form, we map the elimination of the target
+then, to generate the eta expanded form, we map the elimination of the target
 over this environment of eliminators to get the full eliminations that
 are destined for each place in the pattern. This is very straightforward
-as a concept but we have to fix-up our types a little in order to convince
+as a concept but we have to fix-up our types a little to convince
 Agda of the well-scopedness. We use a mapping function we defined, but did not
-mention, at an earlier stage in order to easily map over an the environment to
+mention, at an earlier stage to easily map over an environment to help us
 build the eliminations from the eliminators.
 \begin{code}%
 \>[0]\AgdaKeyword{record}\AgdaSpace{}%
