--- a/TypeCheckerGenerator/latex/Expression.tex
+++ b/TypeCheckerGenerator/latex/Expression.tex
@@ -130,7 +130,7 @@ is showing how one might build the required term as the output of some
 type-synthesis rule for elimination, what is trusted might be the type of the
 target and whatever we learn to trust in the premises. These trusted patterns
 contain places that sculpt out component parts in a piece of matched syntax
-and allow us to use these component parts in constructing a new term.
+and allow us to use these parts in constructing a new term.
 
 Expressions mirror the structure of terms except that they include the option
 to reference some place in a pattern and instantiate it with some substitution
@@ -1075,7 +1075,7 @@ however we can note here how it is that we process our svar instantiations
 \AgdaBound{σ'}\AgdaSymbol{))}\<%
 \end{code}
 That is to say, we first resolve the substitution of expressions to one of
-terms (here we must inline a specialisation of map in order to satisfy Agda's
+terms (here we must inline a specialisation of map to satisfy Agda's
 termination checker) before extending it with the identity substitution for
 all the free variables and finally performing the substitution on the term
 taken from the environment. We substitute the bound variables in the term
