--- a/TypeCheckerGenerator/latex/TermSubstitution.tex
+++ b/TypeCheckerGenerator/latex/TermSubstitution.tex
@@ -71,7 +71,7 @@
 }
 
 Following our generic notion of substitution, we now specialise our
-our definiton to substitute computations. We supply the usual thinning
+definition to substitute computations. We supply the usual thinning
 and weakening mechanics that we rely on as well as defining the identity
 substitution.
 \begin{code}%
