--- a/TypeCheckerGenerator/latex/Expression.tex
+++ b/TypeCheckerGenerator/latex/Expression.tex
@@ -1004,12 +1004,10 @@ piece of syntax that we do not yet have until the pattern is later matched.
 \AgdaBound{T}\<%
 \end{code}
 }
-
 We are able to generate a term from an expression and some opening
 of an environment for the trusted pattern. Most of the cases recurse
 structurally, while variables are simply opened to encompassing scope,
-however we can note here how it is that we process our svar instantiations
-
+however we demonstrate below how svar instatiations are processed.
 \begin{code}%
 \>[0]\AgdaFunction{toTerm}%
 \>[8]\AgdaSymbol{:}\AgdaSpace{}%
@@ -1070,11 +1068,11 @@ however we can note here how it is that we process our svar instantiations
 \AgdaOperator{\AgdaFunction{‼}}\AgdaSpace{}%
 \AgdaBound{penv}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{/term}}\AgdaSpace{}%
-\AgdaSymbol{((}\AgdaBound{id-fv}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{id-fv}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
-\AgdaBound{σ'}\AgdaSymbol{))}\<%
+\AgdaBound{σ'}\AgdaSymbol{)}\<%
 \end{code}
-That is to say, we first resolve the substitution of expressions to one of
+We first resolve the substitution of expressions to one of
 terms (here we must inline a specialisation of map to satisfy Agda's
 termination checker) before extending it with the identity substitution for
 all the free variables and finally performing the substitution on the term
