--- a/TypeCheckerGenerator/latex/Substitution.tex
+++ b/TypeCheckerGenerator/latex/Substitution.tex
@@ -55,7 +55,7 @@
 \end{code}
 }
 
-Substitutions are defined as backward vectors, vectors that grow by appending
+Substitutions are defined as backward vectors: vectors that grow by appending
 elements to the right-hand side as opposed to the left. A substitution is
 defined in terms of two scopes, the scope of the target of substitution, and
 the scope of the entities we will substitute into the target.
@@ -180,7 +180,7 @@ composition of substitutions.
 \AgdaBound{σ'}\<%
 \end{code}
 Here we have paid attention to the types to aid the readability of
-later definitions. This can be seen in the type of our final definition here
+later definitions. This can be seen in the type of our final definition above
 which states that if some $T$ is substitutable, then we are able to compose
 the subsitutions.
 \hide{
