--- a/TypeCheckerGenerator/latex/Context.tex
+++ b/TypeCheckerGenerator/latex/Context.tex
@@ -71,7 +71,7 @@
 }
 We define contexts to be substitutions of constructions. We ensure that the target
 of the substitution is scoped identically to the things we will substitute,
-keeping our contexts in a pre-thinned state.This allows us to use terms
+keeping our contexts in a pre-thinned state. This allows us to use terms
 directly from it without having to fix up the scope first.
 \begin{code}%
 \>[0]\AgdaFunction{Context}\AgdaSpace{}%
@@ -148,7 +148,7 @@ directly from it without having to fix up the scope first.
 \AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨Γ\AgdaUnderscore{}}}\<%
 \end{code}
 }
-We provide a special function to extend contexts which appends a new
+We provide a special function to extend contexts that appends a new
 element to the context (making it no longer a context as $suc γ \neq γ$ in
 $(suc γ) ⇒[ \mbox{Const} ]\; γ$) before weakening the whole substitution
 yielding the context $(suc γ)\; \mbox{⇒[Const]} \;(suc γ)$. The extra effort
