--- a/TypeCheckerGenerator/latex/Thinning.tex
+++ b/TypeCheckerGenerator/latex/Thinning.tex
@@ -680,7 +680,7 @@ somehow narrow the scope.
 There are many scoped entities that we will wish a thinning to act on,
 and so we adopt the convention that all functions detailing an action
 of thinnings begin with "⟨" except the action of a thinning on another
-thinning which equates to composition and so we use the more traditional
+thinning which equates to composition, and so we use the more traditional
 $∘$ notation.
 
 \begin{code}%
@@ -1086,7 +1086,7 @@ sense, for instance in using a thinning to select elements from a vector.
 }
 
 A weakening is a special case of a thinning where the scope is extended by
-one at its most local position, for instance when passing under a binder.
+one at its most local position, for example when passing under a binder.
 This concept is captured here, as well as the relevant type that details
 the action of a weakening.
 
